--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,5 @@
     <string name="termsOfuse">Terms of use</string>
     <string name="share_title">"Share with: "</string>
     <string name="message_support">Thanks to the developers and developers for a cool app!</string>
+    <string name="dot">•</string>
 </resources>
