--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="termsOfuse">Пользовательское соглашение</string>
     <string name="share_title">Поделиться с помощью:</string>
     <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="dot">•</string>
 </resources>
