--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="nothing_found">Ничего не нашлось</string>
     <string name="connect_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
     <string name="refresh_button">Обновить</string>
+    <string name="clear_history_button">Очистить историю</string>
+    <string name="search_history_text">Вы искали</string>
 </resources>
